name:                postgres-wire-highlevel
version:             0.1.0.0
homepage:            https://github.com/postgres-haskell/postgres-wire-highlevel#readme
license:             MIT
license-file:        LICENSE
author:              Vyacheslav Hashov
maintainer:          vyacheslavhashov@gmail.com
copyright:           2017 Vyacheslav Hashov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                      -- Database.PostgreSQL.Session
                      --, Database.PostgreSQL.Query
                      --, Database.PostgreSQL.Other
                       Database.PostgreSQL.Encoder
  build-depends:       base           >= 4.7 && < 5
                     , bytestring
                     , containers     >= 0.5 && < 0.6
                     , postgres-wire
                     , repa           >= 3.4 && < 3.5
                     , store          >= 0.3 && < 0.4
                     , store-core
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveTraversable
    FlexibleContexts
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
    UndecidableInstances

test-suite postgres-wire-highlevel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , postgres-wire-highlevel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/postgres-haskell/postgres-wire-highlevel
